--- a/WarehouseEcommerce/Views/Home/Blog.cshtml
+++ b/WarehouseEcommerce/Views/Home/Blog.cshtml
@@ -30,8 +30,8 @@
     </div>
 </div>
 
-<div class="container-fluid pl-30 pr-30 mt-30 custom-max-width">
-    <div class="col-md-6">
+<div class="row container-fluid pl-30 pr-30 mt-30 custom-max-width ml-auto mr-auto">
+    <div class="col-lg-6">
         <a href="https://shop.ganedata.co.uk/blog/category/ganenews/">
             <div class="grey-bg1 pt-30 pb-30 pl-40 pr-40 mb-10">
                 <div class="What-wedo-text text-center">
@@ -44,7 +44,7 @@
             </div>
         </a>
     </div>
-    <div class="col-md-6">
+    <div class="col-lg-6">
         <a href="https://shop.ganedata.co.uk/blog">
             <div class="grey-bg1 pt-30 pb-30 pl-40 pr-40 mb-10">
                 <div class="What-wedo-text text-center">
@@ -57,7 +57,7 @@
             </div>
         </a>
     </div>
-    <div class="col-md-6">
+    <div class="col-lg-6">
         <a href="#">
             <div class="grey-bg1 pt-30 pb-30 pl-40 pr-40 mb-10">
                 <div class="What-wedo-text text-center">
@@ -70,7 +70,7 @@
             </div>
         </a>
     </div>
-    <div class="col-md-6">
+    <div class="col-lg-6">
         <a href="Promotions">
             <div class="grey-bg1 pt-30 pb-30 pl-40 pr-40 mb-10">
                 <div class="What-wedo-text text-center">
