--- a/WarehouseEcommerce/Views/Home/BusinessIntelligence.cshtml
+++ b/WarehouseEcommerce/Views/Home/BusinessIntelligence.cshtml
@@ -14,14 +14,14 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6 description">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width m-auto">
+        <div class="col-lg-6 description">
             <p>
                 <strong>Data and insights that help retailers deliver enhanced shopper experiences.</strong><br>
                 ShopperTrak gives retailers and shopping centres the data they need to optimize labour, store and marketing performance.<br>
                 Shopper experiences and the retail landscape are evolving rapidly—and for retailers to succeed, they have to adapt. ShopperTrak Analytics delivers data that retailers can easily convert into meaningful insights and actionable outcomes.<br>
                 A Full Analytics Suite Comprehensive, customized reports of high traffic times, traffic patterns and store operations.<br>
-                <strong>Smart Solutions for Shopping Centres</strong><br>
+                <strong>lgart Solutions for Shopping Centres</strong><br>
                 The right data can help shopping centre owners improve efficiency, optimize operations and increase profits. ShopperTrak real-time analytics let property managers visualize and understand traffic patterns – the busiest areas and times – in order to explore new leasing models and enhance your tenant mix. Plus, with the ShopperTrak market intelligence solutions, property managers can benchmark their shopping centre’s traffic against others in their area for additional insights.<br>
                 <strong>Scale Your Investment Globally</strong><br>
                 Retailers rely on ShopperTrak cloud-based analytics to build powerful new performance metrics, draw insights and make the most informed decision. ShopperTrak Academy is an online resource that is on-demand, completely self-paced and available in nine languages to help retailers create a data-driven culture. It helps drive traffic data usage to the store level, ensuring store operations teams understand how Shoppertrak Traffic Insights can be used to optimize labor, improve conversions and identify traffic trends for delivering the optimal shopper experience.
@@ -40,7 +40,7 @@
             <iframe src="https://www.youtube.com/embed/uCBJSQIfEak?feature=oembed" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
             <p><a style="color: #35c08d;" href="uploads/traffic_intelligence_bro_04-2013_a4_trs.pdf">Traffic Intelligence Converting Shoppers Into Buyers</a></p>
         </div>
-        <div class="col-md-6 side-img">
+        <div class="col-lg-6 side-img">
             <div class="mb-10 plr">
                 <img src="~/img/services/bi-top.jpg">
             </div>
@@ -55,9 +55,9 @@
 </section>
 <!-- service-area-start -->
 <div class="service-area pt-80 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="warehouse-management-system">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Warehouse_management.png"> </div>
@@ -72,7 +72,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="stock-control-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Stock_control.png"> </div>
@@ -87,7 +87,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="epod-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/EPoD.png"> </div>
@@ -102,7 +102,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="digital-signage">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Digital_signage.png"> </div>
@@ -117,7 +117,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="real-time-location-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Rfid.png"></div>
@@ -132,7 +132,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="ecommerce">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Ecommerce.png"></div>
