--- a/WarehouseEcommerce/Views/Home/DigitalSignage.cshtml
+++ b/WarehouseEcommerce/Views/Home/DigitalSignage.cshtml
@@ -16,11 +16,11 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
             <div class="col-md-6 description mt-15">
                 <h3 class="text-justify">It’s everything you need – just add displays</h3>
-                <p class="text-justify">Illumineye is an integrated software suite which works seamlessly with our range of media players. It’s a complete solution that’s fully scalable, suitable for every kind of organisation from small/medium businesses through to international organisations.</p>
+                <p class="text-justify">Illumineye is an integrated software suite which works seamlessly with our range of media players. It’s a complete solution that’s fully scalable, suitable for every kind of organisation from lgall/medium businesses through to international organisations.</p>
                 <h3 class="text-justify">No ongoing fees: perpetual licence</h3>
                 <p class="text-justify">Unlike a lot of today’s software, Illumineye is purchased via a perpetual licence – which means that there are no uncomfortable ongoing fees for the software itself. Support is included for the first year and is optional thereafter.</p>
                 <h3 class="text-justify">Software to create, manage and display</h3>
@@ -58,7 +58,7 @@
 
         </div>
     </div>
-    <div class="container-fluid pl-30 pr-30 usecase mt-50 mb-30">
+    <div class="container-fluid pl-30 pr-30 usecase mt-50 mb-30 custom-max-width m-auto">
 
         <div class="row side-img">
             @*<div class="row text-center mt-50 mb-30">
@@ -133,15 +133,15 @@
         </div>
 
     </div>
-    <div class="container-fluid pl-30 pr-30 mt-20">
+    <div class="container-fluid pl-30 pr-30 mt-20 custom-max-width m-auto">
 
     </div>
 </section>
 <!-- service-area-start -->
 <div class="service-area pt-80 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="epod-system">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Epose_self_service.png"> </div>
@@ -156,7 +156,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="stock-control-system">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Stock_control.png"></div>
@@ -171,7 +171,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="HR-time-and-attendance">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Human_resources.png"> </div>
@@ -186,7 +186,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="shoppertrak-business-intelligence">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Business_intelligence.png">  </div>
@@ -201,7 +201,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="warehouse-management-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Warehouse_management.png"> </div>
@@ -216,7 +216,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="loss-prevention">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Lose_prevention.png"> </div>
@@ -226,7 +226,7 @@
                             </h3>
                         </div>
                         <div class="service-text">
-                            <p>Shrink Management as a Service (SMaaS) designed to help enhance productivity.</p>
+                            <p>Shrink Management as a Service (lgaaS) designed to help enhance productivity.</p>
                         </div>
                     </div>
                 </a>
