--- a/WarehouseEcommerce/Views/Home/Epod.cshtml
+++ b/WarehouseEcommerce/Views/Home/Epod.cshtml
@@ -14,8 +14,8 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6 description">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width m-auto">
+        <div class="col-lg-6 description">
             <p>Our electronic proof of delivery (<a href="https://spiritdatacapture.com/epod/">ePoD</a>) module is&nbsp; key a<strong> seamless delivery</strong> solution to major companies, including distribution and logistics organisations. This can make the difference between failure and success at such a critical stage of the delivery process.</p>
             <h2 class="mt-20"><strong>Benefits</strong></h2>
             <ul>
@@ -36,7 +36,7 @@
             <p class="mt-20"><strong>Integrate</strong> <strong>with</strong> <strong>your</strong> <strong>existing</strong> <strong>systems,</strong> using web services/API enabling integration with ERP systems such as, SAP, Microsoft Dynamics & Sage.</p>
             <p class="mt-20"><strong>Last Mile</strong> deliver management on behalf of third parties, manage the final stage of delivery by taking over from another distributor, – which is why we’ve developed our ePod in the Last Mile software module to easily customized to suit your specific requirements.</p>
         </div>
-        <div class="col-md-6 side-img">
+        <div class="col-lg-6 side-img">
             <div class="mb-10 plr">
                 <img src="~/img/services/epod-top.jpeg">
             </div>
@@ -50,10 +50,10 @@
     </div>
 </section>
 <!-- service-area-start -->
-<div class="service-area pt-80 pb-30">
+<div class="service-area pt-80 pb-30 custom-max-width m-auto">
     <div class="container-fluid pl-30 pr-30">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="mobile-device-management">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Mobile_device_management.png"></div>
@@ -68,7 +68,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="stock-control-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Stock_control.png"></div>
@@ -83,7 +83,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="courier-integration">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Courier_integration.png"></div>
@@ -98,7 +98,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="mobile-van-sales">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Mobile_van_sales.png"> </div>
@@ -113,7 +113,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="yard-management">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Yard_management.png"></div>
@@ -128,7 +128,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="fleet-management-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Fleet_tracking.png"> </div>
