--- a/WarehouseEcommerce/Views/Home/EposSelfService.cshtml
+++ b/WarehouseEcommerce/Views/Home/EposSelfService.cshtml
@@ -14,8 +14,8 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6 description">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width m-auto">
+        <div class="col-lg-6 description">
             <p>
                 <strong>Scalability with ease of use</strong><br>
                 The system can be adapted to your business: from a single touch screen till in a small shop to a multi-site business operating many tills. When you choose our EPoSense touch screen till software you can take your pick of a host of great add-on packages. Our Electronic Point of Sale product solutions complement each other and you can combine them to meet the specific requirements of your<br>
@@ -42,7 +42,7 @@
                 <li>Trade counter System with Barcode Product Lookup</li>
             </ul>
         </div>
-        <div class="col-md-6 side-img">
+        <div class="col-lg-6 side-img">
             <div class="mb-10 plr">
                 <img src="~/img/services/epos-top.jpg">
             </div>
@@ -57,9 +57,9 @@
 </section>
 <!-- service-area-start -->
 <div class="service-area pt-80 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="mobile-device-management">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Mobile_device_management.png"></div>
@@ -74,7 +74,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="stock-control-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Stock_control.png"></div>
@@ -89,7 +89,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="epod-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/EPoD.png"> </div>
@@ -104,7 +104,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="real-time-location-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Rfid.png"> </div>
@@ -119,7 +119,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="loss-prevention">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Lose_prevention.png"> </div>
@@ -134,7 +134,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="ecommerce">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Ecommerce.png"> </div>
