--- a/WarehouseEcommerce/Views/Home/FleetTrackingDriverManagement.cshtml
+++ b/WarehouseEcommerce/Views/Home/FleetTrackingDriverManagement.cshtml
@@ -14,8 +14,8 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6 description">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width m-auto">
+        <div class="col-lg-6 description">
             <p style="text-align: justify;">
                 TrackSense provides a complete web-based GPS fleet tracking in real-time, with accurate route tracking, location maps, Geo-location, points of interest, harsh braking and excess speed telemetry.<br>
                 Our fleet tracking platform delivers live and historical data allowing managers to understand fleet activity at a glance.<br>
@@ -59,7 +59,7 @@
                 <li>Secure architecture delivers confidentiality, integrity & availability</li>
             </ul>
         </div>
-        <div class="col-md-6 side-img">
+        <div class="col-lg-6 side-img">
             <div class="mb-10 plr">
                 <img src="~/img/services/fleet-top.jpg">
             </div>
@@ -74,9 +74,9 @@
 </section>
 <!-- service-area-start -->
 <div class="service-area pt-80 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="mobile-device-management">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Mobile_device_management.png"></div>
@@ -91,7 +91,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="stock-control-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Stock_control.png"></div>
@@ -106,7 +106,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="epod-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/EPoD.png"></div>
@@ -121,7 +121,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="mobile-van-sales">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Mobile_van_sales.png"> </div>
@@ -136,7 +136,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="yard-management">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Yard_management.png"></div>
@@ -151,7 +151,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="ecommerce">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Ecommerce.png"></div>
