--- a/WarehouseEcommerce/Views/Home/HumanResources.cshtml
+++ b/WarehouseEcommerce/Views/Home/HumanResources.cshtml
@@ -14,8 +14,8 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6 description">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width m-auto">
+        <div class="col-lg-6 description">
             <p>
                 <strong>Scalability with ease of use</strong><br>
                 The system can be adapted to your business: from a single site SME to a global corporation delivers a streamlined answer to the enduring problem of managing your staff leave and time recording by our east to deploy facial recognition technology. Solution suited to enterprises where hygiene is a priority suchas healthcare, quick service restaurants and food manufacturing. Requires no cards eliminating buddy bunching improving time recording and staff productivity. Solution can be deployed globally managed via a single web portal, multiple roles with performance monitoring Dashboard and HR reports. Can be integrated into third party ERP/Payroll systems via supported API’s or integrated with our BusinesSense platform. Ideal for operations where staff maybe required to wear gloves such as warehouse, chemicals and pharmaceuticals.<br>
@@ -53,7 +53,7 @@
                 <li>Access Control</li>
             </ul>
         </div>
-        <div class="col-md-6 side-img">
+        <div class="col-lg-6 side-img">
             <div class="mb-10 plr">
                 <img src="~/img/services/hr-top.png">
             </div>
@@ -68,9 +68,9 @@
 </section>
 <!-- service-area-start -->
 <div class="service-area pt-80 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="warehouse-management-system">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Warehouse_management.png"></div>
@@ -85,7 +85,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="truevue-retail-rfid-solution">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Retail_solutions.png"></div>
@@ -100,7 +100,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="epod-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/EPoD.png"></div>
@@ -115,7 +115,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="real-time-location-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Rfid.png"></div>
@@ -130,7 +130,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="loss-prevention">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Lose_prevention.png"> </div>
@@ -145,7 +145,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="ecommerce">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Ecommerce.png"> </div>
