--- a/WarehouseEcommerce/Views/Home/LossPrevention.cshtml
+++ b/WarehouseEcommerce/Views/Home/LossPrevention.cshtml
@@ -14,8 +14,8 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6 description">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width m-auto">
+        <div class="col-lg-6 description">
             <p style="text-align: justify;">
                 <strong>Designed to Protect Merchandise and Reduce Shrink</strong><br>
                 Sensormatic is one of the most trusted names in loss prevention. We offer innovative, top-quality solutions that help combat shrink and deliver predictive analytics and insights you can use to help improve operational efficiency and create a better shopper experience. Gane Data are an approved Sensormatic channel partner well positioned to deliver their full suite of connected retail solutions to our customers, service include integration, consultancy and project management.
@@ -56,7 +56,7 @@
                 that fit the smallest checkout stands to the largest DIY store POS systems.
             </p>
         </div>
-        <div class="col-md-6 side-img">
+        <div class="col-lg-6 side-img">
             <div class="mb-10 plr first-img">
                 <img src="~/img/services/lp-bottom.jpg">
             </div>
@@ -74,9 +74,9 @@
 </section>
 <!-- service-area-start -->
 <div class="service-area pt-80 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="epos-self-service">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Epose_self_service.png"></div>
@@ -91,7 +91,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="stock-control-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Stock_control.png"></div>
@@ -106,7 +106,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="epod-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/EPoD.png"> </div>
@@ -121,7 +121,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="shoppertrak-business-intelligence">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Business_intelligence.png"></div>
@@ -136,7 +136,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="truevue-retail-rfid-solution">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Retail_solutions.png"> </div>
@@ -151,7 +151,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="ecommerce">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Ecommerce.png"></div>
