--- a/WarehouseEcommerce/Views/Home/MobileDeviceManagement.cshtml
+++ b/WarehouseEcommerce/Views/Home/MobileDeviceManagement.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "VXL's Fusion EMM handles every device (both static and mobile, including desktops, servers, routers and more) from within a single interface - GaneData";
-    ViewBag.Description = "VXL Endpoint Protector offers MDM for iOS and Android. Enhanced control over the use of smartphones and tablets, enforcing strong security policies and detailed";
+    ViewBag.Description = "VXL Endpoint Protector offers MDM for iOS and Android. Enhanced control over the use of lgartphones and tablets, enforcing strong security policies and detailed";
 }
 
 <!-- slider-area-start -->
@@ -14,8 +14,8 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6 description">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width m-auto">
+        <div class="col-lg-6 description">
             <p style="text-align: justify;">
                 <strong>Fusion UEM – unified endpoint management</strong><br>
                 Fusion UEM brings the industry-leading device management portfolio of applications – to Android (4.x upwards) and iOS (7.0 upwards) mobile devices, Windows desktop / laptop PCs (XP/7/8/10 IoT & Windows 7/10 Professional) and VXL Windows Embedded and Linux thin clients together with Windows-based thin clients from third parties.
@@ -51,7 +51,7 @@
             </p>
 
         </div>
-        <div class="col-md-6 side-img">
+        <div class="col-lg-6 side-img">
             <div class="mb-10 plr">
                 <img src="~/img/services/mdm-top.jpg">
             </div>
@@ -69,152 +69,155 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid pl-30 pr-30 features">
-        <div class="col-md-12 text-center">
+    <div class="container-fluid pl-30 pr-30 features custom-max-width m-auto font-size-14">
+        <div class="text-center">
             <h2 style="border-bottom: 1px solid; border-bottom-color: #000000; padding-bottom: 10px;">Feature</h2>
-            <div class="col-md-6 text-left">
+        </div>
+        
+        <div class="row text-center">
+            <div class="col-lg-6 text-left">
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-key"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">PERPETUAL LICENSE - LIFETIME OWNERSHIP</p>
                         <p class="feature-description">VXL provides Fusion UEM with a perpetual license for lifetime ownership rather than a monthly subscription. A perpetual license eliminates recurring costs other than optional annual support costs and ensures outright control of your IT estate.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-share-square-o"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">DEVICE PROVISIONING</p>
                         <p class="feature-description">Provision both Android (>4.x) and iOS (>7.0) mobile devices and Windows (XP/7/8/10 IoT) / Windows Embedded (XP/WES7/8/10 IoT) desktop/laptop PCs and thin client devices respectively.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-terminal"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">APPLICATION MANAGEMENT</p>
                         <p class="feature-description">Manage applications easily – including remote deployment, provisioning and installation, updates and secure removal.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-user"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">BOYD</p>
                         <p class="feature-description">Fusion UEM provides access to secure applications and data when on company networks or VPNs – and allows access to just personal applications and data when on public networks.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-line-chart"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">REMOTE CONTROL (PLATINUM)</p>
                         <p class="feature-description">Fusion UEM supports remote control situations: VNC and RDP for Windows OS and Linux thin clients and also Android and iOS mobility devices (optional cost).</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-globe"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">ROWSING MANAGEMENT (PLATINUM)</p>
                         <p class="feature-description">Manage device browsers easily – implement secure policies which restrict access to corporate intranets and defined websites.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-users"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">ADV. ENTERPRISE CONFIGURATIONS (PLATINUM)</p>
                         <p class="feature-description">Advanced enterprise configurations enable large organisations to control devices with greater power, flexibility and granularity.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-thumb-tack"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">GEOFENCING (PLATINUM)</p>
                         <p class="feature-description">Limit the use of a device to a specific geographic area including a 1 mile radius to the office, school etc.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 text-left">
+            <div class="col-lg-6 text-left">
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-wrench"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">DEVICE MANAGEMENT & ENROLMENT</p>
                         <p class="feature-description">Supports all Android and iOS phones & tablets, ruggedized devices such as CipherLabs and Tablet Technologies, Windows desktop and laptop PCs and VXL Windows & Linux thin clients together Windows-based thin clients from third parties.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-check-square-o"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">INVENTORY AND ASSET MANAGEMENT</p>
                         <p class="feature-description">Asset management ceases to be a chore with Fusion UEM – see all of your devices, in real time, and generate comprehensive reports.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-lock"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">GDPR & SECURITY MANAGEMENT</p>
                         <p class="feature-description">Helps you comply with the latest GDPR data protection regulations. Keep devices, corporate applications and data secure, in real time – for all devices, regardless of location.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-cloud-upload"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">BROWSER-BASED ADMINISTRATION</p>
                         <p class="feature-description">Built for today, Fusion UEM’s hosted browser-based software is quick and intuitive to use. Everything is just a click or two away.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-envelope"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">E-MAIL MANAGEMENT (PLATINUM)</p>
                         <p class="feature-description">Manage e-mail settings, policies, clients and data on mobile devices as easily as you would with desktop clients.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-file-text"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">CONTENT MANAGEMENT (PLATINUM)</p>
                         <p class="feature-description">Control corporate content, using flexible admin rules – define who can access documents and editing rights. Audit trails log file access and update information.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-map-marker"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">GPS TRACKING (PLATINUM)</p>
                         <p class="feature-description">Provides live location status of mobile device including street map view and tracking history by day, week or month.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 feature-icon">
+                    <div class="col-lg-2 feature-icon">
                         <i class="fa fa-mobile"></i>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-lg-9">
                         <p class="feature-title">PHONE BLOCKING</p>
                         <p class="feature-description">Block communications including what numbers a device can call or receive calls from.</p>
                     </div>
@@ -225,9 +228,9 @@
 </section>
 <!-- service-area-start -->
 <div class="service-area pt-80 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="warehouse-management-system">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Warehouse_management.png"> </div>
@@ -242,7 +245,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="stock-control-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Stock_control.png"> </div>
@@ -257,7 +260,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="epod-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/EPoD.png"></div>
@@ -272,7 +275,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="real-time-location-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Rfid.png">  </div>
@@ -287,7 +290,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="loss-prevention">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Lose_prevention.png"> </div>
@@ -302,7 +305,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="ecommerce">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Ecommerce.png"></div>
