--- a/WarehouseEcommerce/Views/Home/MobileVanSales.cshtml
+++ b/WarehouseEcommerce/Views/Home/MobileVanSales.cshtml
@@ -14,8 +14,8 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6 description">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width m-auto">
+        <div class="col-lg-6 description">
             <p>
                 Our van sales solution combines intelligent Mobile Point of Sales functionality with paperless process management and route optimization to create a powerful solution for your mobile workforce. Application using the latest rugged Android PDA’s or tablets with real-time data transfers between field and office, mobile workers are operationally connected to your business at all times.<br>
                 All of our solutions operate with full offline connectivity and all data is stored on the mobile device for maximum resilience and data integrity.
@@ -34,7 +34,7 @@
             </ul>
             <p class="mt-20">Designed to integrate with our BusinesSense Platform or third party ERP, WMS and order processing systems and via API’s/web services. As a scalable solution, modules can be implemented incrementally allowing additional functions to be installed as your business grows.</p>
         </div>
-        <div class="col-md-6 side-img">
+        <div class="col-lg-6 side-img">
             <div class="mb-10 plr">
                 <img src="~/img/services/mvs-top.png">
             </div>
@@ -49,9 +49,9 @@
 </section>
 <!-- service-area-start -->
 <div class="service-area pt-80 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="mobile-device-management">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Mobile_device_management.png"> </div>
@@ -66,7 +66,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="stock-control-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Stock_control.png"></div>
@@ -81,7 +81,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="epod-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/EPoD.png"></div>
@@ -96,7 +96,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="warehouse-management-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Warehouse_management.png"></div>
@@ -111,7 +111,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="yard-management">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Yard_management.png"></div>
@@ -126,7 +126,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="fleet-management-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Fleet_tracking.png"></div>
