--- a/WarehouseEcommerce/Views/Home/OrderManagement.cshtml
+++ b/WarehouseEcommerce/Views/Home/OrderManagement.cshtml
@@ -14,8 +14,8 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6 description">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width m-auto">
+        <div class="col-lg-6 description">
             <p><strong>Sales Order Processing</strong></p>
             <p>
                 <strong>Give your customer facing staff real-time visibility </strong><br>
@@ -38,7 +38,7 @@
                 <li>GIntegrated to procurement, purchasing and stock management systems</li>
             </ul>
         </div>
-        <div class="col-md-6 side-img">
+        <div class="col-lg-6 side-img">
             <div class="mb-10 plr">
                 <img src="~/img/services/order-top.jpg">
             </div>
@@ -50,7 +50,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="description">
             <h2><strong>Purchase Order Processing</strong></h2>
             <p>
@@ -81,9 +81,9 @@
 </section>
 <!-- service-area-start -->
 <div class="service-area pt-80 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="warehouse-management-system">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Warehouse_management.png"></div>
@@ -98,7 +98,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="stock-control-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Stock_control.png"></div>
@@ -111,7 +111,7 @@
                     </div>
                     </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="epod-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/EPoD.png"> </div>
@@ -126,7 +126,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="shoppertrak-business-intelligence">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Business_intelligence.png"> </div>
@@ -141,7 +141,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="HR-time-and-attendance">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Human_resources.png"> </div>
@@ -156,7 +156,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="ecommerce">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Ecommerce.png"> </div>
