--- a/WarehouseEcommerce/Views/Home/Promotions.cshtml
+++ b/WarehouseEcommerce/Views/Home/Promotions.cshtml
@@ -38,8 +38,8 @@
 </div>
 
 <div class="full-width-grey">
-    <div class="container-fluid pl-30 pr-30 mb-30 custom-max-width">
-        <div class="col-md-3">
+    <div class="row container-fluid pl-30 pr-30 mb-30 custom-max-width m-auto">
+        <div class="col-lg-3">
             <div class="promotion text-center">
                 <img src="~/img/bg/cipher.jpg" class="img-responsive mb-20 mt-20">
                 <h2 class="mb-20">New Products from CipherLab!</h2>
@@ -47,7 +47,7 @@
                 <a class="btn btn-group-lg custom-green mb-20" href="#">Learn More</a>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-lg-3">
             <div class="promotion text-center">
                 <img src="~/img/bg/cipher.jpg" class="img-responsive mb-20 mt-20">
                 <h2 class="mb-20">New Products from CipherLab!</h2>
@@ -55,7 +55,7 @@
                 <a class="btn btn-group-lg custom-green mb-20" href="#">Learn More</a>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-lg-3">
             <div class="promotion text-center">
                 <img src="~/img/bg/cipher.jpg" class="img-responsive mb-20 mt-20">
                 <h2 class="mb-20">New Products from CipherLab!</h2>
@@ -63,7 +63,7 @@
                 <a class="btn btn-group-lg custom-green mb-20" href="#">Learn More</a>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-lg-3">
             <div class="promotion text-center">
                 <img src="~/img/bg/cipher.jpg" class="img-responsive mb-20 mt-20">
                 <h2 class="mb-20">New Products from CipherLab!</h2>
