--- a/WarehouseEcommerce/Views/Home/RetailSolutions.cshtml
+++ b/WarehouseEcommerce/Views/Home/RetailSolutions.cshtml
@@ -14,8 +14,8 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6 description">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width m-auto">
+        <div class="col-lg-6 description">
             <p>
                 <strong>RFID Inventory Intelligence</strong><br>
                 Traditional inventory management methods can’t keep pace with today’s connected consumer demands.
@@ -80,7 +80,7 @@
                 <li>Foundation for unified commerce</li>
             </ul>
         </div>
-        <div class="col-md-6 side-img">
+        <div class="col-lg-6 side-img">
             <div class="mb-10 plr">
                 <img src="~/img/services/rs-top.jpg">
             </div>
@@ -115,7 +115,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid pl-30 pr-30 mt-20">
+    <div class="row container-fluid pl-30 pr-30 mt-20 custom-max-width m-auto">
         <div class="description">
             <p>
                 <strong>Supply Chain Intelligence</strong><br>
@@ -157,9 +157,9 @@
 </section>
 <!-- service-area-start -->
 <div class="service-area pt-80 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="loss-prevention">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Lose_prevention.png"></div>
@@ -174,7 +174,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="stock-control-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Stock_control.png"></div>
@@ -189,7 +189,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="epod-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/EPoD.png"> </div>
@@ -207,7 +207,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="shoppertrak-business-intelligence">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Business_intelligence.png"></div>
@@ -225,7 +225,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="digital-signage">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Digital_signage.png"> </div>
@@ -240,7 +240,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="ecommerce">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Ecommerce.png"> </div>
