--- a/WarehouseEcommerce/Views/Home/Services.cshtml
+++ b/WarehouseEcommerce/Views/Home/Services.cshtml
@@ -19,8 +19,8 @@
     </div>
 </div>
 <div class="services-info description">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width ml-auto mr-auto">
+        <div class="col-lg-6">
             <div class="text-justify">
                 <div style="padding: auto; color: #ffffff;">
                     <h1>Services Info</h1>
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6 text-center">
+        <div class="col-lg-6 text-center">
             <a href="#" class="btn btn-default"
                style="color: #ffffff; width: 100%; margin-top: 10%; font-weight: 400; border-color: rgb(255, 255, 255); background-color: rgba(0, 0, 0, 0) !important;">Our Partners</a>
         </div>
@@ -51,8 +51,8 @@
                         <span><b class="is-visible"><i class="fa fa-gears"> </i>Our Services</b></span>
                     </h1>
                 </div>
-                <div class="container-fluid pl-30 pr-30 our-services">
-                    <div class="col-md-4 mb-20">
+                <div class="row container-fluid pl-30 pr-30 our-services">
+                    <div class="col-lg-4 mb-20">
                         <div style="border: 3px solid #00b54a;" class="pt-30">
                             <div class="single-What-wedo mb-30 text-white">
                                 <div class="What-wedo-text text-center">
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-20">
+                    <div class="col-lg-4 mb-20">
                         <div style="background-color: #ffffff; border: 1px solid #000000;" class="pt-30">
                             <div class="single-What-wedo mb-30 text-white">
                                 <div class="What-wedo-text text-center">
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-20">
+                    <div class="col-lg-4 mb-20">
                         <div style="border: 3px solid #00b54a;" class="pt-30">
                             <div class="single-What-wedo mb-30 text-white">
                                 <div class="What-wedo-text text-center">
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-20">
+                    <div class="col-lg-4 mb-20">
                         <div style="background-color: #ffffff; border: 1px solid #000000;" class="pt-30">
                             <div class="single-What-wedo mb-30 text-white">
                                 <div class="What-wedo-text text-center">
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-20">
+                    <div class="col-lg-4 mb-20">
                         <div style="border: 3px solid #00b54a;" class="pt-30">
                             <div class="single-What-wedo mb-30 text-white">
                                 <div class="What-wedo-text text-center">
@@ -117,7 +117,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-20">
+                    <div class="col-lg-4 mb-20">
                         <div style="background-color: #ffffff; border: 1px solid #000000;" class="pt-30">
                             <div class="single-What-wedo mb-30 text-white">
                                 <div class="What-wedo-text text-center">
@@ -136,8 +136,8 @@
     </div>
 </div>
 <div class="container-fluid pl-30 pr-30 custom-max-width">
-    <div class="container-fluid pl-30 pr-30 pt-30 pb-30">
-        <div class="col-sm-6 text-right">
+    <div class="row container-fluid pl-30 pr-30 pt-30 pb-30">
+        <div class="col-md-6 text-right">
             <h3 style="font-size:18px;font-weight:600;"><span>Industries</span></h3>
 
             <p>
@@ -148,18 +148,18 @@
                 Healthcare
             </p>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <img class="img-responsive" src="~/img/bg/Technologies.jpg">
         </div>
     </div>
 </div>
 <div style="background-color: #eeeeee;" class="pt-30 pb-30">
     <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="container-fluid pl-30 pr-30 pt-30 pb-30">
-            <div class="col-sm-6">
+        <div class="row container-fluid pl-30 pr-30 pt-30 pb-30">
+            <div class="col-md-6">
                 <img class="img-responsive mb-20" src="~/img/bg/Industries.jpg">
             </div>
-            <div class="col-sm-6 text-left">
+            <div class="col-md-6 text-left">
                 <h3 style="font-size:18px;font-weight:600;"><span>Technologies</span></h3>
 
                 <p>
