--- a/WarehouseEcommerce/Views/Home/StockControl.cshtml
+++ b/WarehouseEcommerce/Views/Home/StockControl.cshtml
@@ -14,8 +14,8 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6 description">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width m-auto">
+        <div class="col-lg-6 description">
             <p style="text-align: justify;">
                 Our Stock control module includes inventory management andtraceability, with additional options that include landed cost analysis, and product profiles. This module tracks inventory movements in and out of different warehouse locations, as well as extensive user-defined analysis capabilities, across items and multiple warehouses.<br>
                 Meet Customer Demand Keep your hard-earned customers coming back for more with real-time stock visibility and functionality to have the right products as soon as your customers require them.<br>
@@ -45,7 +45,7 @@
                 <li>UHF RFID GS1 EPC Gen2 data capture at dock door or shelf for products such as apparel, pharmaceutical and other high value products</li>
             </ul>
         </div>
-        <div class="col-md-6 side-img">
+        <div class="col-lg-6 side-img">
             <div class="mb-10 plr">
                 <img src="~/img/services/sc-top.jpg">
             </div>
@@ -60,9 +60,9 @@
 </section>
 <!-- service-area-start -->
 <div class="service-area pt-80 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="mobile-device-management">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Mobile_device_management.png"></div>
@@ -77,7 +77,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="epod-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/EPoD.png"> </div>
@@ -92,7 +92,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="courier-integration">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Courier_integration.png"> </div>
@@ -107,7 +107,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="mobile-van-sales">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Mobile_van_sales.png"> </div>
@@ -122,7 +122,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="yard-management">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Yard_management.png"></div>
@@ -137,7 +137,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="fleet-management-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Fleet_tracking.png"></div>
