--- a/WarehouseEcommerce/Views/Home/WarehouseManagement.cshtml
+++ b/WarehouseEcommerce/Views/Home/WarehouseManagement.cshtml
@@ -14,8 +14,8 @@
     </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6 description">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width m-auto">
+        <div class="col-lg-6 description">
             <p class="description">
                 Our warehouse management software (WMS) is designed to automate all of the tasks performed within your warehouse. From the point of goods receipt to ultimate dispatch to your customers, warehouse management provides a level of automation that ensures that you can maximize your warehouse efficiency without compromise to accuracy.<br>
                 When you use our warehouse management software, all receipts are immediately available for processing, and all sales orders can be submitted for picking as and when required, allowing activities to be planned to best suit operational needs.<br>
@@ -53,7 +53,7 @@
             </ul>
             <p class="mt-10">Our system also allows you to keep optimum stock levels and link warehouse management to sales and purchase order processing, fulfilling your customers demand.</p>
         </div>
-        <div class="col-md-6 side-img">
+        <div class="col-lg-6 side-img">
             <div class="mb-10 plr">
                 <img src="~/img/services/wh-top.jpeg">
             </div>
@@ -68,9 +68,9 @@
 </section>
 <!-- service-area-start -->
 <div class="service-area pt-80 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="mobile-device-management">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Mobile_device_management.png"></div>
@@ -81,7 +81,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="stock-control-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Stock_control.png"></div>
@@ -92,7 +92,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="courier-integration">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Courier_integration.png"></div>
@@ -103,7 +103,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="mobile-van-sales">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Mobile_van_sales.png"></div>
@@ -114,7 +114,7 @@
                     </div>
                 </a>
             </div>
-    <div class="col-md-4 col-sm-4">
+    <div class="col-md-4 col-lg-4">
         <a href="yard-management">
             <div class="single-service text-center mb-70">
                 <div class="service-icon"><img src="~/img/solutions/Yard_management.png"></div>
@@ -125,7 +125,7 @@
             </div>
         </a>
             </div>
-    <div class="col-md-4 col-sm-4">
+    <div class="col-md-4 col-lg-4">
         <a href="fleet-management-system">
             <div class="single-service text-center mb-70">
                 <div class="service-icon"><img src="~/img/solutions/Fleet_tracking.png"></div>
