--- a/WarehouseEcommerce/Views/Home/YardManagement.cshtml
+++ b/WarehouseEcommerce/Views/Home/YardManagement.cshtml
@@ -14,8 +14,8 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6 description">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width m-auto">
+        <div class="col-lg-6 description">
             <p style="text-align: justify;">
                 With the constant movement of trailers, your yard is dynamic. Knowing the location and movement of assets and resources is critical to managing a safe and productive yard.<br>
                 Zebra Motion Works™ Yard facilitates the continuous flow of material and goods between your transportation systems and distribution centers or manufacturing plants, increases gate transaction speed, improves switcher productivity and ensures the right trailer arrives at the right dock door, at the right time.<br>
@@ -47,7 +47,7 @@
                 SmartPack transforms your trailer loading operations by capturing data such as load density, trailer capacity, load quality, wall-by-wall build profiles and images of loads in progress, giving organisations unprecedented insights to achieve peak levels of performance and profitability.
             </p>
         </div>
-        <div class="col-md-6 side-img">
+        <div class="col-lg-6 side-img">
             <div class="mb-10 plr">
                 <img src="~/img/services/yard-top.jpeg">
             </div>
@@ -62,9 +62,9 @@
 </section>
 <!-- service-area-start -->
 <div class="service-area pt-80 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="warehouse-management-system">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Warehouse_management.png"></div>
@@ -79,7 +79,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="stock-control-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Stock_control.png"> </div>
@@ -94,7 +94,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="epod-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/EPoD.png"></div>
@@ -109,7 +109,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="shoppertrak-business-intelligence">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Business_intelligence.png"></div>
@@ -124,7 +124,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="real-time-location-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Rfid.png"></div>
@@ -139,7 +139,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="ecommerce">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Ecommerce.png"></div>
