--- a/WarehouseEcommerce/Views/Shared/_FooterPartial.cshtml
+++ b/WarehouseEcommerce/Views/Shared/_FooterPartial.cshtml
@@ -3,7 +3,7 @@
     <div class="footer-area grey-bg ptb-20">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-12">
+                <div class="col-lg-3 col-md-12">
                     <div class="footer-widget md-30">
                         <div class="footer-address">
                             <p style="text-align: center;">
@@ -15,7 +15,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-lg-6 col-md-12">
                     <div class="widget mb-30">
                         <div class="widget-title">
                             <div class="footer-nav">
@@ -27,7 +27,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-12">
+                <div class="col-lg-3 col-md-12">
                     <div class="widget mb-30">
                         <div class="widget-title">
                             <div class="social-icons text-center">
