--- a/WarehouseEcommerce/Views/Home/AboutUs.cshtml
+++ b/WarehouseEcommerce/Views/Home/AboutUs.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "AboutUs";
 }
-    <div class="custom-max-width m-auto">
+    <div class="custom-max-width m-auto font-size-14">
 
         <div class="slider-area">
             <div class="single-slider ptb-100 bg-opacity" style="background-image:url(img/bg/about-banner.jpg)">
@@ -22,7 +22,7 @@
 
 
         <div class="container-fluid pl-30 pr-30">
-            <div class="description mt-30 text-center">
+            <div class="description mt-30 ">
                 <div style="color:#00b45a;font-size:28px;">
                     <p>
                         GaneData is the leading provider cloud centric business solutions with integrated RFID/IoT & Mobility
@@ -103,7 +103,7 @@
 
             <div class="pt-100 pb-100" style="background-color: #000000; opacity: 0.8;">
                 <div class="container-fluid pl-30 pr-30">
-                    <div class="text-center text-white">
+                    <div class="text-center text-white font-size-14">
                         <p>
                             GaneData carefully examines its business strategy, manufacturing capacities and processes to improve
                             efficiency, ensure quality and a sustainable ecosystem. GaneData supplies quality products at
@@ -118,23 +118,23 @@
         </div>
 
 
-        <div class="container-fluid pl-30 pr-30 mt-30">
-            <div class="col-sm-6">
+        <div class="row container-fluid pl-30 pr-30 mt-30 ml-0">
+            <div class="col-md-6">
                 <h3>01. Valued Added Distributor</h3>
 
                 <p class="text-justify">Alongside the trusted distribution channel GaneData offers our manufacturing partners to sell the r products, the company goes one step further. Ganedata manages the full range of programs and services, including marketing and warehousing, technical support training, business development and professional services. Our valued partnerships with leading manufacturer such as Zebra, Honeywell, Panasonic, Cipherlab, Godex and Advantech. Ensuring our clients the best of breed hardware products at the best price-performance.</p>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <img class="img-responsive" src="~/img/bg/VAD-1.jpg">
             </div>
 
         </div>
 
-        <div class="container-fluid pl-30 pr-30 mt-30">
-            <div class="col-sm-6">
-                <img class="img-responsive" src="~/img/bg/HS-1.jpg">
+        <div class="row container-fluid pl-30 pr-30 mt-30 ml-0">
+            <div class="col-md-6">
+                <img class="img-responsive mb-20" src="~/img/bg/HS-1.jpg">
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <h3>02. Managed Services</h3>
 
                 <p>
@@ -149,8 +149,8 @@
                 </p>
             </div>
         </div>
-        <div class="container-fluid pl-30 pr-30 mt-30 mb-30">
-            <div class="col-sm-6">
+        <div class="row container-fluid pl-30 pr-30 mt-30 mb-30  ml-0">
+            <div class="col-md-6">
                 <h3>03. Consult, Innovate & Build</h3>
 
                 <p>
@@ -162,14 +162,14 @@
                     benefits of your investment are maximized
                 </p>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-6">
                 <img class="img-responsive" src="~/img/bg/RD-1.jpg">
             </div>
 
         </div>
 
         <div class="row client-head mt-20">
-            <div class="col-md-12 text-center">
+            <div class="col-lg-12 text-center">
                 <h2>Helping to unlock their potential</h2>
                 <p>We are technologist, software engineers and designers delivering bespoke customer-centric solutions for many businesses and organisation within Retail, Finance, Wealth and Health.</p>
             </div>
