--- a/WarehouseEcommerce/Views/Home/CourierIntegration.cshtml
+++ b/WarehouseEcommerce/Views/Home/CourierIntegration.cshtml
@@ -15,8 +15,8 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6 description">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width m-auto">
+        <div class="col-lg-6 description">
             <p style="text-align: justify;">
                 Our Courier Integration module allows your business to ships multiple
                 deliveries via couriers, by automatically transferring delivery details saves rekey order information
@@ -47,7 +47,7 @@
                 storage greatly improves warehouse throughput, costs and shipping times.
             </p>
         </div>
-        <div class="col-md-6 side-img">
+        <div class="col-lg-6 side-img">
             <div class="mb-10 plr">
                 <img src="~/img/services/courier-top.jpeg">
             </div>
@@ -59,9 +59,9 @@
 </section>
 <!-- service-area-start -->
 <div class="service-area pt-80 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="mobile-device-management">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Mobile_device_management.png"></div>
@@ -76,7 +76,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="stock-control-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Stock_control.png"></div>
@@ -91,7 +91,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="epod-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/EPoD.png"> </div>
@@ -107,7 +107,7 @@
                     </div>
                 </a><
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="mobile-van-sales">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Mobile_van_sales.png"></div>
@@ -122,7 +122,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="yard-management">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Yard_management.png"> </div>
@@ -137,7 +137,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="fleet-management-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Fleet_tracking.png"> </div>
