--- a/WarehouseEcommerce/Views/Home/News.cshtml
+++ b/WarehouseEcommerce/Views/Home/News.cshtml
@@ -17,9 +17,9 @@
 </div>
 
 
-<div class="container-fluid pl-30 pr-30 custom-max-width">
+<div class="container-fluid pl-30 pr-30 custom-max-width m-auto font-size-14">
     <div class="row">
-        <div class="col-md-8 col-sm-8 mt-sm-50">
+        <div class="col-md-8 col-lg-8 mt-sm-50">
             <article class="recent-news-entry">
                 <div class="date">
                     <span class="day">05</span>
@@ -102,9 +102,9 @@
             </article>
         </div>
 
-        <div class="col-md-3 col-sm-3">
+        <div class="col-md-3 col-lg-3">
             <div class="blog-widget">
-                <div class="col-md-12 mb-30">
+                <div class="col-lg-12 mb-30">
                     <form id="search" action="#">
                         <input type="search" placeholder="Search in here" />
                         <button type="submit" class="searchform-submit">
@@ -113,10 +113,10 @@
                         </button>
                     </form>
                 </div>
-                <div class="col-md-12 text-white mb-30">
+                <div class="col-lg-12 text-white mb-30">
                     <h4 style="background-color: #00b54a; padding: 10px 10px; text-align: center;">Blog & News</h4>
                 </div>
-                <div class="col-md-12 mb-30">
+                <div class="col-lg-12 mb-30">
                     <ul class="list-item">
                         <li><a href="blog">Blog</a></li>
                         <li><a href="#">News</a></li>
@@ -125,18 +125,18 @@
 
                     </ul>
                 </div>
-                <div class="col-md-12 text-white mb-30">
+                <div class="col-lg-12 text-white mb-30">
                     <h4 style="background-color: #00b54a; padding: 10px 10px;text-align: center;">Archive</h4>
                 </div>
-                <div class="col-md-12 mb-30">
+                <div class="col-lg-12 mb-30">
                     <ul>
                         <li><a href="#">September 2014</a></li>
                     </ul>
                 </div>
-                <div class="col-md-12 text-white mb-30">
+                <div class="col-lg-12 text-white mb-30">
                     <h4 style="background-color: #00b54a; padding: 10px 10px;text-align: center;">Lets Get Social</h4>
                 </div>
-                <div class="col-md-12 mb-30">
+                <div class="col-lg-12 mb-30">
                     <p class="mb-20">Follow us via our social profiles for the latest news in Web Design & WordPress</p>
                     <div style="font-size: 2em;">
                         <i style="color: #00aced;" class="fa fa-twitter-square"></i>
@@ -146,7 +146,7 @@
                         <i style="color: #FF7900;" class="fa fa-rss-square"></i>
                     </div>
                 </div>
-                <div class="col-md-12 mb-30 text-white">
+                <div class="col-lg-12 mb-30 text-white">
                     <h4 class="mb-20" style="background-color: #00b54a; padding: 10px 10px;text-align: center;">Tags</h4>
                     <ul class="Tagcloud">
                         <li><a href="#">Computer</a></li>
