--- a/WarehouseEcommerce/Views/Home/RealTimeLocationSystem.cshtml
+++ b/WarehouseEcommerce/Views/Home/RealTimeLocationSystem.cshtml
@@ -14,8 +14,8 @@
 </div>
 
 <section class="mt-30">
-    <div class="container-fluid pl-30 pr-30 custom-max-width">
-        <div class="col-md-6 description">
+    <div class="row container-fluid pl-30 pr-30 custom-max-width m-auto">
+        <div class="col-lg-6 description">
             <p>
                 <strong>SAVANNA™ LOCATION ENGINE</strong><br>
                 Savanna is Zebra’s location data collection and support platform – and it’s at the heart of what makes Zebra location solutions valuable to your business. It drives competitive advantage by turning your big location data into actionable intelligence to optimally mobilize action at the edge. Think of it as the brain of Zebra MotionWorks location solutions: making sense of all that data your operation provides to increase visibility, heighten measurability and drive operational control.<br>
@@ -32,7 +32,7 @@
                 Savanna aggregates and analyses raw edge data from Zebra products and intelligent infrastructure, combining real-time data with historic data, to create a complete picture and intelligent insight for your customers. Using data collection, analytics, artificial intelligence and machine learning, Savanna powers next-gen applications and solutions to create data-powered environments and guide real-time actions.
             </p>
         </div>
-        <div class="col-md-6 side-img">
+        <div class="col-lg-6 side-img">
             <div class="mb-10 plr">
                 <img src="~/img/services/rfid-top.jpg">
             </div>
@@ -44,26 +44,26 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto real-time-location">
         <div class="description">
             <p>
                 <strong>LOCATION TECHNOLOGIES</strong><br>
                 Stay connected and stay in control with our end-to-end solutions, featuring hardware that captures data (including DART UWB Active RFID, WhereNet Active RFID, Bluetooth ® low energy technology, Passive RFID, as well as GPS locate sensing hardware). In addition, we have more fixed, handheld and portable RFID systems installed than any other provider. Learn more about the hardware that powers our solutions and empowers your business.
             </p>
-            <div class="row">
-                <table style="text-align: center; margin: 0 auto;">
+            <div class="">
+                <table class="table-responsive" style="text-align: center; margin: 0 auto;">
                     <tbody>
                         <tr>
-                            <td width="150"><img src="~/img/services/product/rfid-p-1.png"></td>
-                            <td width="150"><img src="~/img/services/product/rfid-p2.png"></td>
-                            <td width="150"><img src="~/img/services/product/rfid-p1.png"></td>
-                            <td width="150"><img src="~/img/services/product/rfid-p3.png"></td>
+                            <td><img src="~/img/services/product/rfid-p-1.png"></td>
+                            <td><img src="~/img/services/product/rfid-p2.png"></td>
+                            <td><img src="~/img/services/product/rfid-p1.png"></td>
+                            <td><img src="~/img/services/product/rfid-p3.png"></td>
                         </tr>
                         <tr>
-                            <td width="150">Ultra Wideband SolutionsReal-Time Asset Personal Visibility</td>
-                            <td width="150">WhereNetLongest Range Asset and Personal Tracking</td>
-                            <td width="150">Bluetooth® Low EnergySolution for Indoor Location Tracking</td>
-                            <td width="150">RFID ProductsWarehouses and loading docks, your enterprise assets</td>
+                            <td>Ultra Wideband SolutionsReal-Time Asset Personal Visibility</td>
+                            <td>WhereNetLongest Range Asset and Personal Tracking</td>
+                            <td>Bluetooth® Low EnergySolution for Indoor Location Tracking</td>
+                            <td>RFID ProductsWarehouses and loading docks, your enterprise assets</td>
                         </tr>
                     </tbody>
                 </table>
@@ -91,15 +91,15 @@
             </p>
         </div>
     </div>
-    <div class="container-fluid pl-30 pr-30">
-        <div class="description">
-            <div class="col-md-4">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto ">
+        <div class="description row">
+            <div class="col-lg-4">
                 <iframe src="https://www.youtube.com/embed/0fv190Oq2UQ?feature=oembed" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <iframe src="https://www.youtube.com/embed/CwMGjxO2WqY?feature=oembed" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <iframe src="https://www.youtube.com/embed/wqh9lJWW8nc?feature=oembed" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
             </div>
         </div>
@@ -107,9 +107,9 @@
 </section>
 <!-- service-area-start -->
 <div class="service-area pt-80 pb-30">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 custom-max-width m-auto">
         <div class="row">
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="warehouse-management-system">
                     <div class="single-service text-center">
                         <div class="service-icon"><img src="~/img/solutions/Warehouse_management.png"></div>
@@ -124,7 +124,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="stock-control-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Stock_control.png"> </div>
@@ -139,7 +139,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="epod-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/EPoD.png"></div>
@@ -154,7 +154,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="shoppertrak-business-intelligence">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Business_intelligence.png"></div>
@@ -169,7 +169,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="real-time-location-system">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Rfid.png"></div>
@@ -184,7 +184,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-4 col-lg-4">
                 <a href="ecommerce">
                     <div class="single-service text-center mb-70">
                         <div class="service-icon"><img src="~/img/solutions/Ecommerce.png"> </div>
