--- a/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿<!-- header start -->
 
     <header>
-        <div class="header-top-area d-xs-none">
+        <div class="header-top-area hide-this">
             <div class="pr-30 pl-30">
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
@@ -19,7 +19,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-lg-6 col-md-6 d-xs-none">
+                    <div class="col-lg-6 col-md-6 hide-this">
                         <div class="header-icon floatright">
                             <a href="https://www.facebook.com/GaneData"><i class="fa fa-facebook"></i></a>
                             <a href="https://twitter.com/GaneData"><i class="fa fa-twitter"></i></a>
@@ -33,7 +33,7 @@
         </div>
         <!-- main-menu-area-start -->
         <div class="main-menu-area" id="navbar">
-            <div class="pr-30 pl-30">
+            <div class="pr-30 pl-30 header-pr">
                 <div class="row ptb-10 navbar-row">
                     <div class="col-lg-3 col-md-3 col-xl-2 logo-div">
                         <div class="logo">
